--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "console": "^0.7.2",
     "core-js": "^3.6.5",
+    "echarts-gl": "^2.0.9",
     "element-ui": "^2.15.9",
     "vue": "^2.6.11",
     "vue-baidu-map": "^0.21.22",
