leaflet迁移至新系统、十万点插件未成功

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "core-js": "^3.6.5",
     "echarts-gl": "^2.0.9",
     "element-ui": "^2.15.9",
+    "leaflet": "^1.9.2",
+    "leaflet-canvas-marker": "^0.2.0",
+    "leaflet.pm": "^2.2.0",
     "vue": "^2.6.11",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.2.0"
